# bot-banhang

./: .env.example  .gitignore  Cargo.toml  HUONG_DAN.md  README.md  bot_clone.sh  bot_list.sh  bot_update.sh  build-linux-artifact.ps1  build.ps1  deploy.sh  upload.ps1
.github/: codex-trigger-tut-public-menu.txt
docs/: ADMIN_PAGE_API.md  BUILD_DEPLOY.md
i18n/: en.json  languages.json  vi.json
migrations/: 20260126100000_init.sql  20260127090000_product_items.sql  20260127090500_order_delivered_data.sql  20260127093000_product_items_is_buy.sql  20260127093100_orders_reserved_item_ids.sql  20260127100000_product_requires_input.sql  20260127100500_orders_customer_input.sql  20260127103000_product_plans.sql  20260127103500_orders_plan.sql  20260127110000_subscribers.sql  20260128110000_webhook_events.sql  20260310100000_add_product_description_image.sql  20260310105000_app_configs.sql  20260310110000_dialogue_states.sql  20260310120000_wallets.sql  20260413090000_crypto_payment_requests.sql  20260413100000_crypto_payment_failure_reason.sql  20260414120000_subscribers_profile.sql  20260414130000_telegram_chat_logs.sql  20260512120000_remove_usdt_hivemind_runtime_artifacts.sql  20260512150000_admin_users.sql  20260512230000_add_uploaded_file_products.sql  20260515100000_subscribers_preferred_language.sql  20260517160000_add_product_sort_order.sql  20260520130000_wallet_order_payment_credit_unique.sql  20260521090000_crypto_payments_v2.sql  20260522100000_add_product_category_button_emoji.sql  20260523120000_product_categories.sql  20260523130000_client_api_keys.sql  (+23 more)
(+125 files in other folders)
