[package]
name = "botbanhang"
version = "0.1.31"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
futures = "0.3"
jsonwebtoken = "9"
once_cell = "1.19"
rand = "0.8"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.4"
urlencoding = "2.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
async-trait = "0.1.89"
tower-http = { version = "0.6.8", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2", "pem"] }

[dependencies.teloxide]
version = "0.17"
default-features = false
features = ["macros", "ctrlc_handler", "throttle", "rustls"]
